--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@ color: #aaa
 <p style="color:#DC143C;font-family:verdana;font-size:150%;text-align:left;"><i>GROUP:CIE-17-2</i></p>
 <p style="color:#00FF7F;font-family:verdana;font-size:150%;text-align:left;"><i>INHA-MAIL-ADDRESS:m.rahimov@student.inha.uz</i></p>
 <p style="color:#A7FC00;font-family:cursive; width: 200px;text-align:left;"><i>Personal information:<br>Well my hobbies i do not know can it be hobby but i like to create some thing which is only mine. It's also one of the reasons why i came to INHA UNIVERSITY i want to learn how to create the games. By hobby i mean that i am already started try to do games even if it is not as good as i wish but i am sure that can reach those games that is being more and more popular in our days. Also i like to stroll around and in this case some times i have a fresh ideas for game.</i> </p>
-
+    <a href="mrakhimov1998.github.io"></a>
 
 
 
